--- a/bladeshop/templates/shop/index.html
+++ b/bladeshop/templates/shop/index.html
@@ -3,5 +3,28 @@
     Shop Home
 {% endblock header %}
 {% block content %}
-    test content -> {{ test }}
+    {% for prd in products %}
+        <article class="product" style="border: 3px solid black;">
+            <a href="{{ url_for('shop.product', prd_id=prd.prd_id) }}">
+                <header>
+                    <h2>{{prd.prd_name}}</h2>
+                </header>
+                <div class="body">
+                    {{prd.prd_id}}
+                    <p>{{prd.prd_category}}</p>
+                    <p>${{prd.prd_price}}</p>
+                    <div>
+                        <script>
+                            function addToCart(prd_id, prd_qty){
+                                //send post request to 
+                                fetch('./cart/add/' + prd_id + '/'+ prd_qty, {method: 'POST'}); //find a way to improve this with jinja later
+                            }
+                        </script>
+                        
+                    </div>
+                </div>
+            </a>
+            <button onclick="addToCart({{ prd.prd_id }}, 1)" type="button">add to cart</button>
+        </article>
+    {% endfor %}
 {% endblock content %}
