--- a/bladeshop/static/style.css
+++ b/bladeshop/static/style.css
@@ -34,6 +34,26 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
     border-radius: .1rem;
 }
 
+.cart-items{
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* flex-basis: 10rem; */
+    /* justify-content: space-around; */
+    /* align-items: stretch; */
+}
+
+.cart-items > article.item{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 10rem;
+
+    /* padding: 1rem;
+    width: 10rem;
+    margin: 1rem 0;
+    border: 1px solid grey;
+    border-radius: .1rem; */
+}
+
 /* .shop-items::after {
     content: "";
     flex-basis: 10rem give it the same width of your child or item;
