--- a/bladeshop/templates/base.html
+++ b/bladeshop/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static.css', filename='style.css') }}">
     </head>
     <body>
         <nav>
