--- a/bladeshop/templates/cart/cart.html
+++ b/bladeshop/templates/cart/cart.html
@@ -20,8 +20,14 @@
 {% endfor %}
 
 </div>
+
 <div>
-    <div style="display: flex; flex-direction: row">
+    <h2>Cart Total</h2>
+    <p>$</p>
+</div>
+
+<div>
+    <div style="display: flex; flex-direction: row; align-items: center; justify-content:center;">
         <button>Checkout</button>
     </div>
 </div>
