added variable add to cart feature on product page and tweaked UI

--- a/bladeshop/templates/cart/cart.html
+++ b/bladeshop/templates/cart/cart.html
@@ -12,7 +12,7 @@
         <h2>{{item.prd_name}}</h2>
     </header>
     <div class="body">
-        <p>{{item.prd_price}}</p>
+        <!-- <p>{{item.prd_price}}</p> -->
         <p>{{item.prd_amount}}</p>
         add control for changing item amount
     </div>
