--- a/bladeshop/templates/cart/cart.html
+++ b/bladeshop/templates/cart/cart.html
@@ -12,22 +12,30 @@
         <h2>{{item.prd_name}}</h2>
     </header>
     <div class="body">
-        <!-- <p>{{item.prd_price}}</p> -->
+        <div class="item-category-pill">{{item.prd_category}}</div>
         <p>{{item.prd_amount}}</p>
-        add control for changing item amount
+        <p>${{item.prd_price}}</p>
+        <div>
+            <input class="item-qty-ctr" id="{{ item.prd_id }}" type="number" min="1" value="{{item.prd_amount}}"/>
+        </div>
+        <div>
+            <button type="button">Remove from Cart</button>
+        </div>
     </div>
 </article>
 {% endfor %}
 
 </div>
 
-<div>
-    <h2>Cart Total</h2>
-    <p>$</p>
+<div style="display: flex; flex-flow: column nowrap; align-content:center; justify-content:center; align-items:center;">
+    <h2 style="text-align:center;">Cart Total</h2>
+    <div style="width:50%;">
+        <p>$</p>
+    </div>
 </div>
 
 <div>
-    <div style="display: flex; flex-direction: row; align-items: center; justify-content:center;">
+    <div style="display: flex; flex-direction: row; align-content:center; justify-content:center; align-items:center;">
         <button>Checkout</button>
     </div>
 </div>
