--- a/bladeshop/templates/shop/index.html
+++ b/bladeshop/templates/shop/index.html
@@ -4,6 +4,13 @@
 {% endblock header %}
 {% block content %}
     <div class="shop-items">
+        todo:
+-make changes in cart qty automatically update db
+-make remove from cart automatically update
+-add cart total line
+-finish checkout button functionality
+-add product filtering & category pill linking
+-clean ui (fix grids especially)
         add a redirect if someone tries to add an item to their cart that brings up a login prompt
     {% for prd in products %}
         <article class="product">
