--- a/bladeshop/static/css/style.css
+++ b/bladeshop/static/css/style.css
@@ -15,7 +15,12 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
 
 
-
+.search-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
 
 .shop-items{
     display: flex;
